Fix for T227: DataTable: When clicking on image gallery, the buttons are displayed partly outside of the screen Fix for T266: Table header z-index is to high

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@ wave-navigation {
 
 wave-next-layer-list {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     width: 16vw;
     min-width: 200px;
     left: 0;
@@ -22,7 +22,7 @@ wave-next-layer-list {
         background-color: rgba(255, 255, 255, 0.87);
         border-bottom-left-radius: 2px;
         border-bottom-right-radius: 2px;
-        z-index: 2;
+        z-index: 3;
     }
 }
 
